# mokytojas

./: .editorconfig  .gitignore  README.md  meson.build  mokytojas.gresource.xml  start.sh
include/: shortcuts.h  telemetry.h
src/: mokytojas.c  shortcuts.c  telemetry.c
subprojects/: libkikaitachi.wrap
